# StandaloneSCToolDAQ

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindCPPZMQ.cmake
